# Easycache

./: CMakeLists.txt  EasyCachePolicy.h  EasyLfuCache.h  EasyLruCache.h  main.cpp
EasyArcCache/: ArcCache.h  ArcLfuPart.h  ArcLruPart.h  ArcNode.h
docs/: ARC.md  BuildRun.md  Home.md  LFU-Aging.md  LFU.md  LRU-K.md  LRU.md
